--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div>
         <h2>Preview</h2>
     </div>
-    <div class="clear">
-    <div id="div1" class="clear"></div>
-    <div id="div2" class="clear"></div>
-    <div id="div3" class="clear"></div>
-    </div>
+   
+    <div id="div1"></div>
+    <div id="div2"></div>
+    <div id="div3"></div>
+  
 
     <script src="index.js"></script>
 
